--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.7.22</version>
+        </dependency>
     </dependencies>
 
 </project>
