--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
+# The url of the repository in nexus that will store the artifacts
 repository.url=http://localhost:8081/repository/maven-releases/
+
+# The repository id (from settings.xml)
 repository.id=nexus
