fix load properties bug

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,5 +1,5 @@
 # The url of the repository in nexus that will store the artifacts
-repository.url=
+repository.url=http://localhost:8081/repository/maven-check/
 
 # The repository id (from settings.xml)
-repository.id=
+repository.id=nexus
