--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,5 +1,5 @@
 # The url of the repository in nexus that will store the artifacts
-repository.url=http://localhost:8081/repository/maven-check/
+repository.url=http://tonba.com
 
 # The repository id (from settings.xml)
 repository.id=nexus
